Refactor and enhance components for improved internationalization and UI consistency
- Updated CreateOrEditContent component to support RTL layout based on language.
- Enhanced VideoDetails component with additional description and improved layout.
- Modified VideosList to translate video language.
- Refactored EventHeroSlider to remove unnecessary props and improve structure.
- Deleted unused HeroSlider component and replaced with HomeHeroSlider.
- Updated HeroTitle component to handle RTL text direction.
- Adjusted translation keys in Arabic locale for consistency.
- Refactored EventsPageContent to simplify props for EventHeroSlider.
- Updated HomeContent to use new HomeHeroSlider component.

--- a/frontend/src/i18n/locales/ar/translation.json
+++ b/frontend/src/i18n/locales/ar/translation.json
@@ -591,7 +591,7 @@
   "Select Date Range": "اختر نطاق التاريخ",
   "Warm discussion": "مناقشة دافئة",
   "Drama": "دراما",
-  "Event Reports": "تقارير الفعاليات",
+  "Event Reports": "تقارير الأحداث",
   "No search results found": "لم يتم العثور على نتائج بحث",
   "Search Results": "نتائج البحث",
   "reading(s)": "قراءة(ات)",
@@ -604,7 +604,7 @@
   "Last Month": "الشهر الماضي",
   "Last Year": "العام الماضي",
   "Side Filtration": "تصفية جانبية",
-  "Events & Community": "الفعاليات والمجتمع",
+  "Events & Community": "الأحداث والمجتمع",
   "Source": "المصدر",
   "Personal Growth": "النمو الشخصي",
   "Nature": "الطبيعة",
@@ -799,7 +799,7 @@
   "Incorrect Username Or Password": "اسم المستخدم أو كلمة المرور غير صحيحة",
   "Sections": "الأقسام",
   "Add a comment...": "أضف تعليقًا...",
-  "Events List": "قائمة الفعاليات",
+  "Events List": "قائمة الأحداث",
   "Add/Edit Event": "إضافة/تعديل حدث",
   "Changes ready to save. Click 'Update Profile' to save all changes.": "التغييرات جاهزة للحفظ. انقر على 'تحديث الملف الشخصي' لحفظ جميع التغييرات.",
   "Enter current password": "أدخل كلمة المرور الحالية",
@@ -1064,7 +1064,7 @@
   "— Cards & Photos weekly": "— بطاقات وصور أسبوعية",
   "— Readings for you": "— قراءات من أجلك",
   "This Weekly Card": "بطاقة هذا الأسبوع",
-  "Most Liked events": "أكثر الفعاليات إعجاباً",
+  "Most Liked events": "أكثر الأحداث إعجاباً",
   "Suggestions you might like": "اقتراحات قد تعجبك",
   "Newly Added": "تمت الإضافة حديثاً",
   "Browse Now": "تصفح الآن",
@@ -1298,7 +1298,7 @@
   "Bosnia and Herzegovina": "البوسنة والهرسك",
   "Add New Season": "إضافة موسم جديد",
   "Content": "المحتوى",
-  "Search events...": "بحث عن الفعاليات ...",
+  "Search events...": "بحث عن الأحداث ...",
   "No seasons found for this series": "لم يتم العثور على مواسم لهذه السلسلة",
   "Edit Series": "تعديل السلسلة",
   "Edit Season": "تعديل الموسم",
