fix taiwan text

--- a/frontend/src/i18n/locales/ar/translation.json
+++ b/frontend/src/i18n/locales/ar/translation.json
@@ -1271,7 +1271,7 @@
   "Is New": "جديد",
   "Top Viewed Contents": "المحتويات الأكثر مشاهدة",
   "Top Liked Contents": "المحتويات الأكثر إعجاباً",
-  "Taiwant": "تايوان",
+  "Taiwan": "تايوان",
   "Add/Edit Video": "إضافة/تعديل الفيديو",
   "All Events": "جميع الأحداث",
   "Website Info": "معلومات الموقع",
