--- a/frontend/src/i18n/locales/ch/translation.json
+++ b/frontend/src/i18n/locales/ch/translation.json
@@ -1270,7 +1270,7 @@
   "Is New": "新",
   "Top Viewed Contents": "最多瀏覽內容",
   "Top Liked Contents": "最多喜愛內容",
-  "Taiwant": "台灣",
+  "Taiwan": "台灣",
   "Add/Edit Video": "添加/編輯視頻",
   "All Events": "所有事件",
   "Website Info": "網站資訊",
