--- a/frontend/src/i18n/locales/en/translation.json
+++ b/frontend/src/i18n/locales/en/translation.json
@@ -1272,7 +1272,7 @@
   "Is New": "Is New",
   "Top Viewed Contents": "Top Viewed Contents",
   "Top Liked Contents": "Top Liked Contents",
-  "Taiwant": "Taiwant",
+  "Taiwan": "Taiwan",
   "Add/Edit Video": "Add/Edit Video",
   "All Events": "All Events",
   "Website Info": " Website Info",
