--- a/frontend/src/i18n/locales/jp/translation.json
+++ b/frontend/src/i18n/locales/jp/translation.json
@@ -1242,7 +1242,7 @@
   "Is New": "新着",
   "Top Viewed Contents": "最も閲覧されたコンテンツ",
   "Top Liked Contents": "最もいいねされたコンテンツ",
-  "Taiwant": "台湾",
+  "Taiwan": "台湾",
   "Add/Edit Video": "ビデオの追加/編集",
   "All Events": "すべてのイベント",
   "Website Info": "ウェブサイト情報",
