--- a/frontend/src/i18n/locales/tr/translation.json
+++ b/frontend/src/i18n/locales/tr/translation.json
@@ -1236,7 +1236,7 @@
   "Is New": "Yeni",
   "Top Viewed Contents": "En Çok Görüntülenen İçerikler",
   "Top Liked Contents": "En Çok Beğenilen İçerikler",
-  "Taiwant": "Tayvan",
+  "Taiwan": "Tayvan",
   "Add/Edit Video": "Video Ekle/Düzenle",
   "All Events": "Tüm Etkinlikler",
   "Website Info": "Site Bilgisi",
