Refactor event components to content components
- Renamed and refactored EventHeroEnhanced to ContentHeroEnhanced for better clarity and consistency.
- Updated API calls in various components to fetch content data instead of event data.
- Replaced instances of GuidingReadingcard with Contentcard across multiple components.
- Adjusted routing to accommodate new content pages and updated translations for external link validation.
- Cleaned up unused code and comments for improved readability.

--- a/frontend/src/i18n/locales/ar/translation.json
+++ b/frontend/src/i18n/locales/ar/translation.json
@@ -1340,7 +1340,9 @@
   "Authentication Required": "تسجيل الدخول مطلوب",
   "You need to log in to interact. Please log in to continue.": "من أجل التفاعل يجب أن تقوم بتسجيل الدخول. يرجى تسجيل الدخول للمتابعة.",
   "Log In": "تسجيل الدخول",
-  "Cancel": "إلغاء",
-  "": "",
-  "": ""
+  "External Link is required": "الرابط الخارجي مطلوب",
+  "Please enter a valid URL": "يرجى إدخال رابط صحيح",
+  "Please enter a valid URL starting with http:// or https://": " يرجى إدخال رابط صحيح يبدأ بـ http:// أو https://",
+  "Enter the external link (e.g., https://example.com)": " أدخل الرابط الخارجي (مثل: https://example.com)",
+  "External Link": "الرابط الخارجي"
 }
