feat: Add Create or Edit Writer component with form validation and image upload functionality
feat: Implement Writers List component with pagination, search, and delete functionality

feat: Create NewsCard component for displaying articles with responsive design

i18n: Add Chinese translations for basic UI elements

feat: Create BookOfStudy page component

--- a/frontend/src/i18n/locales/ar/translation.json
+++ b/frontend/src/i18n/locales/ar/translation.json
@@ -1344,5 +1344,28 @@
   "Please enter a valid URL": "يرجى إدخال رابط صحيح",
   "Please enter a valid URL starting with http:// or https://": " يرجى إدخال رابط صحيح يبدأ بـ http:// أو https://",
   "Enter the external link (e.g., https://example.com)": " أدخل الرابط الخارجي (مثل: https://example.com)",
-  "External Link": "الرابط الخارجي"
+  "External Link": "الرابط الخارجي",
+  "Loading Writers...": "جارٍ تحميل الكتاب...",
+  "No Writers found matching your search.": " لم يتم العثور على كتاب مطابقين لبحثك.",
+  "No Writers available.": "  لا يوجد كتاب متاحون.",
+  "Enter attachment Name": "أدخل اسم المرفق",
+  "File Name": "  اسم الملف",
+  "Search attachments...": "بحث في المرفقات...",
+  "Select Attachments": "اختر المرفقات",
+  "File": "ملف",
+  "View File": "  عرض الملف",
+  "Selected": "محدد",
+  "attachments": "  المرفقات",
+  "Confirm Selection": "تأكيد الاختيار",
+  "Add New Attachment": "إضافة مرفق جديد",
+  "Edit Attachment": "تعديل المرفق",
+  "Attachments": "المرفقات",
+  "File is required": "الملف مطلوب",
+  "Click to select or manage attachments for this content": "انقر لتحديد أو إدارة المرفقات لهذا المحتوى",
+  "Delete Attachment": "حذف المرفق",
+  "Are you sure you want to delete this attachment? This action cannot be undone.": "هل أنت متأكد أنك تريد حذف هذا المرفق؟ لا يمكن التراجع عن هذا الإجراء.",
+  "Chinese (Simp)": " الصينية (المبسطة)",
+  "Chinese (Trad)": " الصينية (التقليدية)",
+  "Selected Attachments": " المرفقات المحددة",
+  "": ""
 }
