feat: Implement video loading and category filtering features in VideosPageContent
- Refactored video fetching logic to support pagination and loading more videos.
- Updated API calls to use GetVideosByCategoryId instead of GetItemsByCategoryId.
- Added loading state management for fetching more weekly videos.
- Enhanced UI to include load more functionality for weekly videos.
- Introduced new routes for category content pages.
- Added book management API functions for creating, editing, and deleting books.
- Developed CreateOrEditBook component for book creation and editing.
- Implemented ContentPostsFilter and ContentPostsFilterSction components for advanced filtering of content.
- Integrated multi-select dropdowns for filtering by categories, writers, and languages.

--- a/frontend/src/i18n/locales/ar/translation.json
+++ b/frontend/src/i18n/locales/ar/translation.json
@@ -781,7 +781,7 @@
   "Search writers...": "البحث عن الكتاب...",
   "Event updated successfully": "تم تحديث الحدث بنجاح",
   "Happened At": "حدث في",
-  "Please fix the errors in the form": "  يرجى تصحيح الأخطاء في النموذج",
+  "Please fix the errors in the form": "يرجى تصحيح الأخطاء في النموذج",
   "Status is required": "الحالة مطلوبة",
   "Read time is required": "وقت القراءة مطلوب",
   "Card": "كرت",
@@ -1029,8 +1029,8 @@
   "Enter video URL (YouTube)": "أدخل رابط الفيديو (يوتيوب)",
   "Event Video Thumbnail": "صورة مصغرة للفيديو",
   "Cast": "طاقم العمل",
-  "Like Added": "  تمت الإضافة إلى الإعجابات",
-  "Like Removed": "  تمت إزالة الإعجابات",
+  "Like Added": "تمت الإضافة إلى الإعجابات",
+  "Like Removed": "تمت إزالة الإعجابات",
   "Watch Later": "مشاهدة لاحقاً",
   "Add to Playlist": "إضافة إلى قائمة التشغيل",
   "Remove from Playlist": "إزالة من قائمة التشغيل",
@@ -1251,7 +1251,7 @@
   "Enter content subtitle": "أدخل عنوان المحتوى الفرعي",
   "Enter content excerpt or summary": "أدخل مقتطف أو ملخص المحتوى",
   "Enter the full content of the content": "أدخل المحتوى الكامل للمحتوى",
-  "Click to upload images or drag and drop": "  انقر لتحميل الصور أو اسحبها وأفلتها",
+  "Click to upload images or drag and drop": "انقر لتحميل الصور أو اسحبها وأفلتها",
   "Create Content": "إنشاء محتوى",
   "No Content available.": "لا يوجد محتوى متاح.",
   "Update Content": "تحديث المحتوى",
@@ -1324,7 +1324,7 @@
   "Event added to weekly list successfully": "تم إضافة الحدث إلى القائمة الأسبوعية بنجاح",
   "Event removed from weekly list successfully": "تمت إزالة الحدث من القائمة الأسبوعية بنجاح",
   "No videos found": "لم يتم العثور على فيديوهات",
-  "Top Liked Videos": "  أكثر الفيديوهات إعجاباً",
+  "Top Liked Videos": "أكثر الفيديوهات إعجاباً",
   "Event Details": "تفاصيل الحدث",
   "Event Information": "معلومات الحدث",
   "Sort Sections": "ترتيب الأقسام",
@@ -1347,15 +1347,15 @@
   "External Link": "الرابط الخارجي",
   "Loading Writers...": "جارٍ تحميل الكتاب...",
   "No Writers found matching your search.": " لم يتم العثور على كتاب مطابقين لبحثك.",
-  "No Writers available.": "  لا يوجد كتاب متاحون.",
+  "No Writers available.": "لا يوجد كتاب متاحون.",
   "Enter attachment Name": "أدخل اسم المرفق",
-  "File Name": "  اسم الملف",
+  "File Name": "اسم الملف",
   "Search attachments...": "بحث في المرفقات...",
   "Select Attachments": "اختر المرفقات",
   "File": "ملف",
-  "View File": "  عرض الملف",
+  "View File": "عرض الملف",
   "Selected": "محدد",
-  "attachments": "  المرفقات",
+  "attachments": "المرفقات",
   "Confirm Selection": "تأكيد الاختيار",
   "Add New Attachment": "إضافة مرفق جديد",
   "Edit Attachment": "تعديل المرفق",
@@ -1367,5 +1367,46 @@
   "Chinese (Simp)": " الصينية (المبسطة)",
   "Chinese (Trad)": " الصينية (التقليدية)",
   "Selected Attachments": " المرفقات المحددة",
-  "": ""
+  "Enter the full content of the Video": "أدخل المحتوى الكامل للفيديو",
+  "This is the description that will be displayed to viewers": "هذا هو الوصف الذي سيتم عرضه للمشاهدين",
+  "No groups yet": "لا توجد مجموعات حتى الآن",
+  "Create your first study group with a photo and description": " أنشئ أول مجموعة دراسة لك مع صورة ووصف",
+  "Manage study groups with photos and descriptions": " إدارة مجموعات الدراسة مع الصور والوصفات",
+  "Book of Study": "كتاب الدراسة",
+  "Add New Group": "إضافة مجموعة جديدة",
+  "The Book": "الكِتاب",
+  "The Books": "الكتب",
+  "The Books Groups": "مجموعات الكتب",
+  "Writers": "الكُتّاب",
+  "Add Writer": "إضافة كاتب",
+  "All Writers": "جميع الكتاب",
+  "Add/Edit Writer": "إضافة/تعديل كاتب",
+  "Create New Writer": "إنشاء كاتب جديد",
+  "Back to Writers List": "العودة إلى قائمة الكتاب",
+  "Please select an image with minimum dimensions of 300x300 pixels for best quality.": " يرجى اختيار صورة بأبعاد لا تقل عن 300x300 بكسل للحصول على أفضل جودة.",
+  "Writer Avatar": "الصورة الرمزية للكاتب",
+  "Recommended: Square aspect ratio (1:1)": " موصى به: نسبة العرض إلى الارتفاع المربعة (1:1)",
+  "Enter writer description": " أدخل وصف الكاتب",
+  "Enter writer position": " أدخل موقع الكاتب",
+  "Enter avatar URL as alternative to file upload": " أدخل رابط الصورة الرمزية كبديل لتحميل الملف",
+  "Create Writer": "إنشاء كاتب",
+  "Search groups...": " بحث في المجموعات...",
+  "Groups": " المجموعات",
+  "Group is required": "المجموعة مطلوبة",
+  "Enter the full content of the Book": " أدخل المحتوى الكامل للكتاب",
+  "Select Group": "اختر المجموعة",
+  "No Groups found": "  لم يتم العثور على مجموعات",
+  "Create New Book": "  إنشاء كتاب جديد",
+  "Edit New Book": "  تعديل كتاب جديد",
+  "Back to Books List": " العودة إلى قائمة الكتب",
+  "Add/Edit Book": "  إضافة/تعديل كتاب",
+  "Enter book title": " أدخل عنوان الكتاب",
+  "Create Book": "  إنشاء كتاب",
+  "Book Groups": "  مجموعات الكتب",
+  "groups": "مجموعات",
+  "No groups available.": "لا توجد مجموعات متاحة.",
+  "Create New Book Group": "إنشاء مجموعة كتب جديدة",
+  "Enter group name": "أدخل اسم المجموعة",
+  "Enter group description": "أدخل وصف المجموعة",
+  "Create Group": "إنشاء مجموعة"
 }
