feat: Update ContentCard and DynamicSection components for improved layout and responsiveness
- Adjusted max-width of ContentCard to enhance visual consistency across devices.
- Modified padding in DynamicSection for better spacing on medium screens.
- Enhanced DynamicSection to pass additional props to Card component.
- Updated NewsCard to remove unnecessary console log.
- Refined Usernavbar links for better navigation clarity.
- Improved WeekPhotosCard to accept dynamic image height.
- Added new translations for book-related content in Arabic.
- Removed unused CardOrPhotoDetails and CardsAndPhotosContent components.
- Updated CategoryContentPage header for better user experience.
- Fixed typo in DashboardContent for consistency in section naming.
- Refactored routing to accommodate new Books and Posts pages.
- Introduced PostsTabs component for better organization of post categories.
- Created BooksContent component to manage book categories and details.
- Developed PostsContent to integrate PostsTabs and display top viewed data.

--- a/frontend/src/i18n/locales/ar/translation.json
+++ b/frontend/src/i18n/locales/ar/translation.json
@@ -1408,5 +1408,13 @@
   "Create New Book Group": "إنشاء مجموعة كتب جديدة",
   "Enter group name": "أدخل اسم المجموعة",
   "Enter group description": "أدخل وصف المجموعة",
-  "Create Group": "إنشاء مجموعة"
+  "Create Group": "إنشاء مجموعة",
+  "No books available in this category": "لا توجد كتب متاحة في هذه الفئة",
+  "Explore our collection of books": "استكشف مجموعتنا من الكتب",
+  "Books": "الكتب",
+  "Read More": "اقرأ المزيد",
+  "Books of Study": "  كتب الدراسة",
+  "Book Description": "وصف الكتاب",
+  "": "",
+  "": ""
 }
