--- a/frontend/src/i18n/locales/ar/translation.json
+++ b/frontend/src/i18n/locales/ar/translation.json
@@ -361,6 +361,7 @@
   "Add Event": "إضافة حدث",
   "User Name": "اسم المستخدم",
   "Position": "المنصب",
+  "Department": "القسم",
   "Job": "الوظيفة",
   "Avatar URL": "رابط الصورة الرمزية",
   "Social Media": "وسائل التواصل الاجتماعي",
@@ -687,6 +688,7 @@
   "Posts Categories": "فئات المقالات",
   "Videos Categories": "فئات الفيديوهات",
   "Positions": "المناصب",
+  "Departments": "الأقسام",
   "Enter metadata (JSON format)": "أدخل البيانات الوصفية (تنسيق JSON)",
   "Or enter image URL": "أو أدخل رابط الصورة",
   "Select Status": "اختر الحالة",
@@ -740,6 +742,7 @@
   "Event Image": "صورة الحدث",
   "Back to Dashboard": "العودة إلى لوحة التحكم",
   "Select Position": "اختر المنصب",
+  "Select Department": "اختر القسم",
   "Avatar": "الصورة الرمزية",
   "Job Title": "المسمى الوظيفي",
   "platform": "المنصة",
@@ -749,16 +752,22 @@
   "Enter a brief description or bio": "أدخل وصفًا موجزًا أو سيرة ذاتية",
   "Name is required": "الاسم مطلوب",
   "Position is required": "المنصب مطلوب",
+  "Department is required": "القسم مطلوب",
   "Job title is required": "المسمى الوظيفي مطلوب",
   "Avatar is required": "الصورة الرمزية مطلوبة",
   "Add Position": "إضافة منصب",
+  "Add Department": "إضافة قسم",
   "No positions found": "لا توجد مناصب",
+  "No departments found": "لا توجد أقسام",
   "Member created successfully": "تم إنشاء العضو بنجاح",
   "Story date is required": "تاريخ القصة مطلوب",
   "Image is required": "الصورة مطلوبة",
   "Positions Management": "إدارة المناصب",
+  "Departments Management": "إدارة الأقسام",
   "Manage team positions and roles": "إدارة مناصب الفريق والأدوار",
+  "Manage team departments and roles": "إدارة أقسام الفريق والأدوار",
   "positions": "المناصب",
+  "departments": "الأقسام",
   "Manage posts categories and classifications": "إدارة فئات وتصنيفات المقالات",
   "Add/Edit News": "إضافة/تعديل الأخبار",
   "News List": "قائمة الأخبار",
@@ -824,19 +833,28 @@
   "Event deleted successfully": "تم حذف الحدث بنجاح",
   "Member updated successfully": "تم تحديث العضو بنجاح",
   "Search positions...": "البحث في المناصب...",
+  "Search department...": "البحث في الأقسام...",
+  "Search Departments...": "البحث في الأقسام...",
   "No categories found": "لم يتم العثور على تصنيفات",
   "Member deleted successfully": "تم حذف العضو بنجاح",
   "members": "الأعضاء",
   "Failed to load positions": "فشل تحميل المناصب",
+  "Failed to load departments": "فشل تحميل الأقسام",
   "Position updated": "تم تحديث المنصب",
+  "Department updated": "تم تحديث القسم",
   "Position created": "تم إنشاء المنصب",
+  "Department created": "تم إنشاء القسم",
   "Operation failed": "فشلت العملية",
   "Position deleted": "تم حذف المنصب",
+  "Department deleted": "تم حذف القسم",
   "Delete failed": "فشل الحذف",
   "Search Positions": "بحث في المناصب",
+  "Search departments": "بحث في الأقسام",
   "Edit Position": "تعديل المنصب",
+  "Edit Department": "تعديل القسم",
   "Delete Position": "حذف المنصب",
-  "Are you sure you want to delete this position? This action cannot be undone.": "هل أنت متأكد أنك تريد حذف هذا المنصب؟ لا يمكن التراجع عن هذا الإجراء.",
+  "Delete Department": "حذف القسم",
+  "Are you sure you want to delete this department? This action cannot be undone.": "هل أنت متأكد أنك تريد حذف هذا القسم؟ لا يمكن التراجع عن هذا الإجراء.",
   "Card deleted successfully": "تم حذف البطاقة بنجاح",
   "Card updated successfully": "تم تحديث البطاقة بنجاح",
   "Card created successfully": "تم إنشاء البطاقة بنجاح",
@@ -1388,6 +1406,7 @@
   "Recommended: Square aspect ratio (1:1)": " موصى به: نسبة العرض إلى الارتفاع المربعة (1:1)",
   "Enter writer description": " أدخل وصف الكاتب",
   "Enter writer position": " أدخل موقع الكاتب",
+  "Enter writer department": " أدخل قسم الكاتب",
   "Enter avatar URL as alternative to file upload": " أدخل رابط الصورة الرمزية كبديل لتحميل الملف",
   "Create Writer": "إنشاء كاتب",
   "Search groups...": " بحث في المجموعات...",
