Refactor: Improve language handling and translation loading across video and post categories
- Updated language imports and constants for better organization.
- Implemented language selection and translation loading functionality in CreateOrEditVideo and VideosCategoriesContent components.
- Enhanced user experience by adding toast notifications for successful and failed translation loads.
- Cleaned up unused code and comments in various components.
- Added language-related translations in English and Arabic JSON files.

--- a/frontend/src/i18n/locales/ar/translation.json
+++ b/frontend/src/i18n/locales/ar/translation.json
@@ -1434,6 +1434,10 @@
   "Read More": "اقرأ المزيد",
   "Books of Study": "  كتب الدراسة",
   "Book Description": "وصف الكتاب",
+  "Load translation for selected language": "تحميل ترجمة اللغة المحددة",
+  "Load": "تحميل",
+  "Translation loaded successfully": "تم تحميل الترجمة بنجاح",
+  "Failed to load translation": "فشل في تحميل الترجمة",
   "": "",
   "": ""
 }
